# misaxx-ome-visualizer

./: CMakeLists.txt  README.md
cmake/: misaxx-ome-visualizer-config.cmake.in  module_info.h.in
include/misaxx-ome-visualizer/: module.h  module_info.h  module_interface.h
include/misaxx-ome-visualizer/attachments/: colormap.h
src/: main.cpp
src/misaxx-ome-visualizer/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-ome-visualizer/algorithms/: find_colormap_task.cpp  find_colormap_task.h  visualize_task.cpp  visualize_task.h
src/misaxx-ome-visualizer/attachments/: colormap.cpp
